--- a/lessons/precalc/index.html
+++ b/lessons/precalc/index.html
@@ -1,4 +1,4 @@
-<!-- lessons/precalc/index.html - Fixed: No Stuck Sidebar, Perfect Mobile Layout -->
+<!-- lessons/precalc/index.html - Updated: Wider Text, Centered Button Text -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +13,6 @@
             background: white; 
             color: #333; 
             line-height: 1.6; 
-            overflow-x: hidden; /* Prevent any horizontal scroll */
         }
         .main-container {
             padding: 40px 20px; 
@@ -25,20 +24,29 @@
         h1, h2, h3 { color: #198754; text-align: center; }
         .overview { 
             width: 100%;
-            max-width: 800px; 
+            max-width: 900px; /* Wider overview text */
             text-align: center; 
             margin-bottom: 60px; 
             padding: 30px; 
         }
+        .overview p { 
+            font-size: 1.2rem; /* Larger overview text */
+            max-width: 800px;
+            margin: 0 auto 30px auto;
+        }
         .overview ul { 
             text-align: left; 
             display: inline-block; 
-            font-size: 1.1rem; 
-            padding-left: 30px; 
+            font-size: 1.2rem; /* Larger bullets */
+            padding-left: 40px; 
+            max-width: 700px;
+        }
+        .overview ul li {
+            margin-bottom: 12px;
         }
         .unit-list { 
             width: 100%;
-            max-width: 500px; 
+            max-width: 600px; /* Wider buttons area */
             display: flex; 
             flex-direction: column; 
             align-items: center; 
@@ -49,7 +57,7 @@
             background: #198754; 
             color: white; 
             border: none; 
-            padding: 22px; 
+            padding: 25px; 
             border-radius: 15px; 
             font-size: 1.2rem; 
             text-align: center; 
@@ -62,33 +70,45 @@
             transform: translateY(-3px); 
         }
         .unit-button h4 { 
-            margin: 0 0 8px 0; 
-            font-size: 1.4rem; 
+            margin: 0 0 10px 0; 
+            font-size: 1.6rem; /* Larger unit title */
         }
         .unit-button p { 
             margin: 0; 
-            font-size: 1.1rem; 
+            font-size: 1.2rem; /* Larger description */
             opacity: 0.9; 
         }
         .video-section { 
             width: 100%;
-            max-width: 800px;
+            max-width: 900px; /* Wider video section */
             margin-top: 60px; 
             text-align: center; 
             padding: 30px; 
         }
+        .video-section p { 
+            font-size: 1.2rem; 
+            max-width: 800px;
+            margin: 0 auto 20px auto;
+        }
         iframe { 
             width: 100%; 
-            height: 300px; 
+            height: 400px; 
             border-radius: 12px; 
         }
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
             .main-container { padding: 30px 15px; }
-            .overview { padding: 25px 15px; }
-            .unit-list { max-width: 100%; gap: 20px; }
+            .overview { padding: 25px 15px; max-width: 100%; }
+            .overview p, .overview ul { font-size: 1.1rem; }
+            .unit-list { max-width: 100%; }
+            .unit-button { padding: 22px; }
+            .unit-button h4 { font-size: 1.5rem; }
+            .unit-button p { font-size: 1.1rem; }
+            iframe { height: 250px; }
+        }
+        @media (max-width: 480px) {
+            .overview ul { padding-left: 30px; }
             .unit-button { padding: 20px; }
-            .unit-button h4 { font-size: 1.3rem; }
-            iframe { height: 220px; }
+            .unit-button h4 { font-size: 1.4rem; }
         }
     </style>
 </head>
