--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,4 @@
-<!-- unit1-conic.html -->
+<!-- unit1-conic.html - Full Updated with Fixed Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -18,12 +18,12 @@
     <li><strong>Hyperbola</strong>: Plane steeper than generator.</li>
 </ul>
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Conic_sections_with_plane.svg" alt="Conic sections formed by plane and cone" style="max-width:100%; border-radius:8px;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Conic_sections_with_plane.svg" alt="Conic sections formed by plane and cone" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
 <p><strong>(x - h)² + (y - k)² = r²</strong></p>
-
-<p>If center is at origin (0,0): <strong>x² + y² = r²</strong></p>
 
 <h3>Examples</h3>
 <p><strong>Example 1:</strong> Find the equation of a circle with center (-2, 3) and radius 7.</p>
@@ -38,10 +38,13 @@
     <li>Real-life uses: Wheels, planetary orbits (approximately circular), optical lenses.</li>
 </ul>
 
-<p><img src="https://www.mathsisfun.com/geometry/images/circle-equation.gif" alt="Circle equation and graph" style="max-width:100%;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Circle_with_parts.svg" alt="Parts of a circle" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <h3>Helpful Videos</h3>
-<p><a href="https://www.youtube.com/watch?v=Awdxh3QdLv8" target="_blank">Introduction to Conic Sections (DepEd TV - Accessible in PH/Japan)</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/Awdxh3QdLv8" frameborder="0" allowfullscreen></iframe>
+<p><a href="https://www.youtube.com/watch?v=Awdxh3QdLv8" target="_blank">Introduction to Conic Sections (DepEd TV)</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/Awdxh3QdLv8" frameborder="0" allowfullscreen loading="lazy"></iframe>
 
 <p><a href="https://www.youtube.com/watch?v=TyqgjnnHYk4" target="_blank">Circles in Pre-Calculus (Filipino Explanation)</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/TyqgjnnHYk4" frameborder="0" allowfullscreen loading="lazy"></iframe>
