--- a/lessons/precalc/unit2-parabola.html
+++ b/lessons/precalc/unit2-parabola.html
@@ -1,4 +1,4 @@
-<!-- unit2-parabola.html -->
+<!-- unit2-parabola.html - Full Updated with Fixed Images -->
 <h2>Unit 2: Parabola and Ellipse</h2>
 
 <h3>Learning Objectives</h3>
@@ -16,16 +16,17 @@
     <li>Horizontal: (y - k)² = 4p(x - h)</li>
 </ul>
 
-<p>Focus: (h, k + p) or (h + p, k); Directrix opposite.</p>
-
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Parabola_circle_directrix.svg" alt="Parabola focus and directrix" style="max-width:100%;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Parabola_circle_directrix.svg" alt="Parabola focus and directrix" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <h3>Ellipse</h3>
 <p>Sum of distances to two foci is constant. Eccentricity 0 < e < 1.</p>
-<p>Standard: (x - h)²/a² + (y - k)²/b² = 1 (a > b, horizontal).</p>
-<p>c² = a² - b², foci at (±c, k).</p>
+<p>Standard: (x - h)²/a² + (y - k)²/b² = 1 (a > b).</p>
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Ellipse-def-en.svg" alt="Ellipse with foci and axes" style="max-width:100%;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Ellipse-def-en.svg" alt="Ellipse with foci and axes" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <h3>Examples</h3>
 <p><strong>Parabola:</strong> (x - 1)² = 8(y + 2) → p = 2, focus (1, 0).</p>
@@ -38,7 +39,8 @@
 </ul>
 
 <h3>Helpful Videos</h3>
-<p><a href="https://www.youtube.com/watch?v=fY03z6PXPek" target="_blank">Parabola (DepEd SLM Based)</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/fY03z6PXPek" frameborder="0" allowfullscreen></iframe>
+<p><a href="https://www.youtube.com/watch?v=fY03z6PXPek" target="_blank">Parabola (DepEd-based)</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/fY03z6PXPek" frameborder="0" allowfullscreen loading="lazy"></iframe>
 
-<p><a href="https://www.youtube.com/watch?v=8Afel63TLso" target="_blank">Ellipse for Grade 11</a></p>
+<p><a href="https://www.youtube.com/watch?v=8Afel63TLso" target="_blank">Ellipse Explanation</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/8Afel63TLso" frameborder="0" allowfullscreen loading="lazy"></iframe>
