--- a/lessons/precalc/unit3-hyperbola.html
+++ b/lessons/precalc/unit3-hyperbola.html
@@ -1,4 +1,4 @@
-<!-- unit3-hyperbola.html -->
+<!-- unit3-hyperbola.html - Full Updated with Fixed Images -->
 <h2>Unit 3: Hyperbola</h2>
 
 <h3>Learning Objectives</h3>
@@ -16,9 +16,9 @@
     <li>Vertical: (y - k)²/a² - (x - h)²/b² = 1</li>
 </ul>
 
-<p>c² = a² + b², foci (±c, k), asymptotes y - k = ±(b/a)(x - h).</p>
-
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Hyperbola_%28en%29.svg" alt="Hyperbola branches and asymptotes" style="max-width:100%;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Hyperbola_%28en%29.svg" alt="Hyperbola branches and asymptotes" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <h3>Examples</h3>
 <p><strong>Example:</strong> x²/9 - y²/16 = 1 → a=3, b=4, c=5, foci (±5, 0).</p>
@@ -29,8 +29,6 @@
     <li>Applications: Navigation (LORAN), nuclear cooling towers, comet orbits.</li>
 </ul>
 
-<p><img src="https://mathworld.wolfram.com/images/eps-svg/Hyperbola_1000.svg" alt="Hyperbola example graph" style="max-width:100%;"></p>
-
 <h3>Helpful Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=X0rxWJeYljY" target="_blank">Hyperbola Standard to General Equation</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/X0rxWJeYljY" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/X0rxWJeYljY" frameborder="0" allowfullscreen loading="lazy"></iframe>
