--- a/lessons/precalc/unit4-review.html
+++ b/lessons/precalc/unit4-review.html
@@ -1,5 +1,5 @@
-<!-- unit4-review.html -->
-<h2>Unit 4: Systems of Conic Sections, Degenerate Cases, and Applications</h2>
+<!-- unit4-review.html - Full Updated with Fixed Images -->
+<h2>Unit 4: Review and Applications of Conic Sections</h2>
 
 <h3>Learning Objectives</h3>
 <ul>
@@ -9,9 +9,11 @@
 </ul>
 
 <h3>Degenerate Cases</h3>
-<p>When discriminant leads to point, line, or intersecting lines.</p>
+<p>When the plane passes through the vertex: point, line, or intersecting lines.</p>
 
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Degenerate_conics.svg" alt="Degenerate conics: point, line, two lines" style="max-width:100%;"></p>
+<p style="text-align:center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Degenerate_conics.svg" alt="Degenerate conics: point, line, two lines" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+</p>
 
 <h3>Systems and Applications</h3>
 <p>Find intersection of line and circle (tangent/secant), or circle and parabola.</p>
@@ -24,5 +26,5 @@
 </ul>
 
 <h3>Full Review Playlist</h3>
-<p><a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Grade 11 Pre-Calculus Full Playlist (Highly Recommended)</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" frameborder="0" allowfullscreen></iframe>
+<p><a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Grade 11 Pre-Calculus Full</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" frameborder="0" allowfullscreen loading="lazy"></iframe>
