--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,4 @@
-<!-- unit1-conic.html - Full Code with Working Images -->
+<!-- unit1-conic.html - Updated with Different Working Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -19,7 +19,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Conic_sections_with_plane.svg" alt="Conic sections formed by plane and cone" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://math.libretexts.org/Bookshelves/Calculus/Calculus_(OpenStax)/11%3A_Parametric_Equations_and_Polar_Coordinates/11.05%3A_Conic_Sections/11.5.02.png" alt="Conic sections diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
@@ -39,12 +39,9 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Circle_with_parts.svg" alt="Parts of a circle" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://www.onlinemathlearning.com/image-files/circle-conic-section.png" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=Awdxh3QdLv8" target="_blank">Introduction to Conic Sections (DepEd TV)</a></p>
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/Awdxh3QdLv8" frameborder="0" allowfullscreen loading="lazy"></iframe>
-
-<p><a href="https://www.youtube.com/watch?v=TyqgjnnHYk4" target="_blank">Circles in Pre-Calculus (Filipino Explanation)</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/TyqgjnnHYk4" frameborder="0" allowfullscreen loading="lazy"></iframe>
