--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,4 @@
-<!-- unit1-conic.html - Updated with Different Working Images -->
+<!-- unit1-conic.html - Full Code with New Working Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -19,7 +19,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://math.libretexts.org/Bookshelves/Calculus/Calculus_(OpenStax)/11%3A_Parametric_Equations_and_Polar_Coordinates/11.05%3A_Conic_Sections/11.5.02.png" alt="Conic sections diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://etc.usf.edu/clipart/78200/78278/78278_conic-sections_1_lg.gif" alt="Conic sections diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
