--- a/lessons/precalc/index.html
+++ b/lessons/precalc/index.html
@@ -1,4 +1,3 @@
-<!-- lessons/precalc/index.html - Updated: Wider Text, Centered Button Text -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,29 +23,23 @@
         h1, h2, h3 { color: #198754; text-align: center; }
         .overview { 
             width: 100%;
-            max-width: 900px; /* Wider overview text */
+            max-width: 900px; 
             text-align: center; 
             margin-bottom: 60px; 
             padding: 30px; 
         }
         .overview p { 
-            font-size: 1.2rem; /* Larger overview text */
-            max-width: 800px;
-            margin: 0 auto 30px auto;
+            font-size: 1.2rem; 
         }
         .overview ul { 
             text-align: left; 
             display: inline-block; 
-            font-size: 1.2rem; /* Larger bullets */
+            font-size: 1.2rem; 
             padding-left: 40px; 
-            max-width: 700px;
-        }
-        .overview ul li {
-            margin-bottom: 12px;
         }
         .unit-list { 
             width: 100%;
-            max-width: 600px; /* Wider buttons area */
+            max-width: 600px; 
             display: flex; 
             flex-direction: column; 
             align-items: center; 
@@ -71,44 +64,32 @@
         }
         .unit-button h4 { 
             margin: 0 0 10px 0; 
-            font-size: 1.6rem; /* Larger unit title */
+            font-size: 1.6rem; 
         }
         .unit-button p { 
             margin: 0; 
-            font-size: 1.2rem; /* Larger description */
+            font-size: 1.2rem; 
             opacity: 0.9; 
         }
         .video-section { 
             width: 100%;
-            max-width: 900px; /* Wider video section */
+            max-width: 900px; 
             margin-top: 60px; 
             text-align: center; 
             padding: 30px; 
-        }
-        .video-section p { 
-            font-size: 1.2rem; 
-            max-width: 800px;
-            margin: 0 auto 20px auto;
         }
         iframe { 
             width: 100%; 
             height: 400px; 
             border-radius: 12px; 
         }
-        @media (max-width: 768px) {
-            .main-container { padding: 30px 15px; }
-            .overview { padding: 25px 15px; max-width: 100%; }
-            .overview p, .overview ul { font-size: 1.1rem; }
-            .unit-list { max-width: 100%; }
-            .unit-button { padding: 22px; }
-            .unit-button h4 { font-size: 1.5rem; }
-            .unit-button p { font-size: 1.1rem; }
-            iframe { height: 250px; }
-        }
         @media (max-width: 480px) {
-            .overview ul { padding-left: 30px; }
+            .main-container { padding: 30px 15px; }
+            .overview { padding: 25px 15px; }
+            .unit-list { max-width: 100%; }
             .unit-button { padding: 20px; }
             .unit-button h4 { font-size: 1.4rem; }
+            iframe { height: 220px; }
         }
     </style>
 </head>
@@ -130,19 +111,19 @@
 
         <h2>Choose a Unit</h2>
         <div class="unit-list">
-            <button class="unit-button" onclick="loadLesson('PreCalculus', 1)">
+            <button class="unit-button" onclick="parent.document.getElementById('lesson-content').innerHTML = parent.fetch('lessons/precalc/unit1-conic.html').then(r => r.text()).then(data => parent.document.getElementById('lesson-content').innerHTML = data);">
                 <h4>Unit 1</h4>
                 <p>Introduction to Conic Sections & the Circle</p>
             </button>
-            <button class="unit-button" onclick="loadLesson('PreCalculus', 2)">
+            <button class="unit-button" onclick="parent.document.getElementById('lesson-content').innerHTML = parent.fetch('lessons/precalc/unit2-parabola.html').then(r => r.text()).then(data => parent.document.getElementById('lesson-content').innerHTML = data);">
                 <h4>Unit 2</h4>
                 <p>Parabola & Ellipse</p>
             </button>
-            <button class="unit-button" onclick="loadLesson('PreCalculus', 3)">
+            <button class="unit-button" onclick="parent.document.getElementById('lesson-content').innerHTML = parent.fetch('lessons/precalc/unit3-hyperbola.html').then(r => r.text()).then(data => parent.document.getElementById('lesson-content').innerHTML = data);">
                 <h4>Unit 3</h4>
                 <p>Hyperbola</p>
             </button>
-            <button class="unit-button" onclick="loadLesson('PreCalculus', 4)">
+            <button class="unit-button" onclick="parent.document.getElementById('lesson-content').innerHTML = parent.fetch('lessons/precalc/unit4-review.html').then(r => r.text()).then(data => parent.document.getElementById('lesson-content').innerHTML = data);">
                 <h4>Unit 4</h4>
                 <p>Review, Systems & Applications</p>
             </button>
@@ -155,11 +136,5 @@
             <iframe src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" allowfullscreen></iframe>
         </div>
     </div>
-
-    <script>
-        function loadLesson(subject, unit) {
-            if (parent.loadLesson) parent.loadLesson(subject, unit);
-        }
-    </script>
 </body>
 </html>
