--- a/index.html
+++ b/index.html
@@ -3,88 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online SHS - Education is Meant to be Free</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Pre-Calculus - Grade 11 STEM</title>
+    <style>
+        body { 
+            font-family: 'Roboto', sans-serif; 
+            padding: 0; 
+            margin: 0; 
+            background: white; 
+            color: #333; 
+            line-height: 1.6; 
+        }
+        .main-container {
+            padding: 40px 20px; 
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center; 
+        }
+        h1, h2, h3 { color: #198754; text-align: center; }
+        .overview { 
+            width: 100%;
+            max-width: 900px; 
+            text-align: center; 
+            margin-bottom: 60px; 
+            padding: 30px; 
+        }
+        .overview p { 
+            font-size: 1.2rem; 
+        }
+        .overview ul { 
+            text-align: left; 
+            display: inline-block; 
+            font-size: 1.2rem; 
+            padding-left: 40px; 
+        }
+        .unit-list { 
+            width: 100%;
+            max-width: 600px; 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            gap: 25px; 
+        }
+        .unit-button { 
+            width: 100%; 
+            background: #198754; 
+            color: white; 
+            border: none; 
+            padding: 25px; 
+            border-radius: 15px; 
+            font-size: 1.2rem; 
+            text-align: center; 
+            cursor: pointer; 
+            transition: background 0.3s, transform 0.2s; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+        .unit-button:hover { 
+            background: #157347; 
+            transform: translateY(-3px); 
+        }
+        .unit-button h4 { 
+            margin: 0 0 10px 0; 
+            font-size: 1.6rem; 
+        }
+        .unit-button p { 
+            margin: 0; 
+            font-size: 1.2rem; 
+            opacity: 0.9; 
+        }
+        .video-section { 
+            width: 100%;
+            max-width: 900px; 
+            margin-top: 60px; 
+            text-align: center; 
+            padding: 30px; 
+        }
+        iframe { 
+            width: 100%; 
+            height: 400px; 
+            border-radius: 12px; 
+        }
+        @media (max-width: 480px) {
+            .main-container { padding: 30px 15px; }
+            .overview { padding: 25px 15px; }
+            .unit-list { max-width: 100%; }
+            .unit-button { padding: 20px; }
+            .unit-button h4 { font-size: 1.4rem; }
+            iframe { height: 220px; }
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <button id="sidebarToggle" class="btn btn-dark me-2 fs-4">
-                <i class="ri-menu-line"></i>
-            </button>
-            <a class="navbar-brand fw-bold" href="#">Online SHS</a>
-            <span class="navbar-text ms-auto">"EDUCATION IS MEANT TO BE FREE"</span>
+    <div class="main-container">
+        <div class="overview">
+            <h1>Pre-Calculus (Grade 11 STEM)</h1>
+            <p><strong>Overview:</strong> This course introduces analytic geometry, focusing on conic sections—their definitions, equations, graphs, and real-world applications. It strengthens algebraic and geometric skills essential for calculus.</p>
+
+            <h2>Course Learning Objectives</h2>
+            <ul>
+                <li>Illustrate the formation of conic sections from a double cone.</li>
+                <li>Derive, transform, and graph standard/general equations of circles, parabolas, ellipses, and hyperbolas.</li>
+                <li>Determine key elements (center, vertices, foci, directrix, asymptotes).</li>
+                <li>Solve situational problems involving conic sections.</li>
+                <li>Recognize degenerate cases and solve systems of conics.</li>
+            </ul>
         </div>
-    </nav>
 
-    <div class="sidebar bg-dark vh-100 position-fixed top-0 pt-5" id="sidebar">
-        <ul class="list-unstyled px-3">
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('myPage')"><i class="ri-user-line me-2"></i>My Page</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('lessons')"><i class="ri-book-open-line me-2"></i>Lessons</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('quizzes')"><i class="ri-questionnaire-line me-2"></i>Activity/Quiz</button></li>
-            <li><button class="btn text-white w-100 text-start py-3" onclick="showTab('tests')"><i class="ri-file-paper-2-line me-2"></i>Tests</button></li>
-        </ul>
+        <h2>Choose a Unit</h2>
+        <div class="unit-list">
+            <button class="unit-button" onclick="parent.loadLesson('PreCalculus', 1)">
+                <h4>Unit 1</h4>
+                <p>Introduction to Conic Sections & the Circle</p>
+            </button>
+            <button class="unit-button" onclick="parent.loadLesson('PreCalculus', 2)">
+                <h4>Unit 2</h4>
+                <p>Parabola & Ellipse</p>
+            </button>
+            <button class="unit-button" onclick="parent.loadLesson('PreCalculus', 3)">
+                <h4>Unit 3</h4>
+                <p>Hyperbola</p>
+            </button>
+            <button class="unit-button" onclick="parent.loadLesson('PreCalculus', 4)">
+                <h4>Unit 4</h4>
+                <p>Review, Systems & Applications</p>
+            </button>
+        </div>
+
+        <div class="video-section">
+            <h2>Recommended Playlists</h2>
+            <p>These DepEd-aligned playlists provide clear Filipino explanations with examples.</p>
+            <p><a href="https://www.youtube.com/playlist?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" target="_blank">Primary Playlist: Grade 11 Pre-Calculus (STEM) Complete Coverage</a></p>
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLFG5lKeDCYPnDEPoEPsCZyhopg2IHLnxr" allowfullscreen></iframe>
+        </div>
     </div>
 
-    <div class="main-content">
-        <section class="container pt-5 mt-5">
-            <div id="myPage" class="tab">
-                <h1 class="text-center mb-4">Welcome Back!</h1>
-                <h2 class="text-center mb-5">"EDUCATION IS MEANT TO BE FREE"</h2>
-                <h3>Your Progress</h3>
-                <div id="progress-charts" class="row g-4"></div>
-                <p id="points" class="mt-4 fw-bold fs-4 text-center"></p>
-                <p id="study-time" class="fs-5 text-center"></p>
-                <div id="lesson-times" class="mt-5"></div>
-            </div>
-
-            <div id="lessons" class="tab" style="display:none;">
-                <h1 class="mb-4">Lessons</h1>
-                <select id="subject-select" class="form-select w-75 mb-4 mx-auto d-block" onchange="loadUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="unit-list" class="d-flex flex-wrap justify-content-center gap-3 mb-4"></div>
-                <div id="lesson-content" class="card p-5 bg-white shadow"></div>
-            </div>
-
-            <div id="quizzes" class="tab" style="display:none;">
-                <h1 class="mb-4">Activity/Quiz</h1>
-                <select id="quiz-subject" class="form-select w-75 mb-4 mx-auto d-block" onchange="loadQuizUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="quiz-list" class="d-flex flex-wrap gap-3 mb-4"></div>
-                <div id="quiz-content" class="card p-5 bg-white shadow"></div>
-            </div>
-
-            <div id="tests" class="tab" style="display:none;">
-                <h1 class="mb-4">Tests</h1>
-                <select id="test-subject" class="form-select w-75 mb-4 mx-auto d-block" onchange="loadTestUnits(this.value)">
-                    <option value="">Select Subject</option>
-                    <option value="PreCalculus">Pre-Calculus</option>
-                    <option value="GeneralBiology1">General Biology 1</option>
-                    <option value="GeneralChemistry1">General Chemistry 1</option>
-                    <option value="GeneralPhysics1">General Physics 1</option>
-                    <option value="EarthScience">Earth Science</option>
-                </select>
-                <div id="test-list" class="d-flex flex-wrap gap-3 mb-4"></div>
-                <div id="test-content" class="card p-5 bg-white shadow"></div>
-            </div>
-        </section>
-    </div>
-
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Fallback if parent.loadLesson not available
+        if (!parent.loadLesson) {
+            console.log('Parent loadLesson not available - using direct fetch');
+            function loadLesson(subject, unit) {
+                let fileName = '';
+                if (unit === 1) fileName = 'unit1-conic.html';
+                else if (unit === 2) fileName = 'unit2-parabola.html';
+                else if (unit === 3) fileName = 'unit3-hyperbola.html';
+                else if (unit === 4) fileName = 'unit4-review.html';
+                
+                fetch(`lessons/precalc/${fileName}`)
+                    .then(response => response.text())
+                    .then(data => {
+                        parent.document.getElementById('lesson-content').innerHTML = data;
+                    });
+            }
+        }
+    </script>
 </body>
 </html>
