--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,4 @@
-<!-- unit1-conic.html - Full Code with New Working Images -->
+<!-- unit1-conic.html - Full Code with New Working Sample Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -19,7 +19,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://etc.usf.edu/clipart/78200/78278/78278_conic-sections_1_lg.gif" alt="Conic sections diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicplane.png" alt="Conic sections formation" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
@@ -39,7 +39,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://www.onlinemathlearning.com/image-files/circle-conic-section.png" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/coniccircle.png" alt="Circle equation and graph" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
