--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,3 @@
-<!-- unit1-conic.html - Full Code with New Working Sample Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -39,7 +38,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://mathbitsnotebook.com/Geometry/Conics/coniccircle.png" alt="Circle equation and graph" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/coniccircle.png" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
