--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -18,7 +18,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicplane.png" alt="Conic sections formation" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://etc.usf.edu/clipart/78200/78278/78278_conic-sections_1_lg.gif" alt="Conic sections formation diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
@@ -38,7 +38,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://mathbitsnotebook.com/Geometry/Conics/coniccircle.png" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://etc.usf.edu/clipart/61100/61161/61161_circle-conic_lg.gif" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
