--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,3 +1,4 @@
+<!-- unit1-conic.html - Full Code with Accessible Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -18,7 +19,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://etc.usf.edu/clipart/78200/78278/78278_conic-sections_1_lg.gif" alt="Conic sections formation diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Conic_sections_with_plane.svg/800px-Conic_sections_with_plane.svg.png" alt="Conic sections formation diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
@@ -38,7 +39,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://etc.usf.edu/clipart/61100/61161/61161_circle-conic_lg.gif" alt="Circle as conic section" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Circle_with_parts.svg/800px-Circle_with_parts.svg.png" alt="Parts of a circle" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
