--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,4 +1,3 @@
-<!-- unit1-conic.html - Full Code with Accessible Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
@@ -19,7 +18,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Conic_sections_with_plane.svg/800px-Conic_sections_with_plane.svg.png" alt="Conic sections formation diagram" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicplane.png" alt="Conic sections formation" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <p>The standard equation of a <strong>circle</strong> with center (h, k) and radius r is:</p>
@@ -39,9 +38,12 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Circle_with_parts.svg/800px-Circle_with_parts.svg.png" alt="Parts of a circle" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/coniccircle.png" alt="Circle equation and graph" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Helpful Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=Awdxh3QdLv8" target="_blank">Introduction to Conic Sections (DepEd TV)</a></p>
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/Awdxh3QdLv8" frameborder="0" allowfullscreen loading="lazy"></iframe>
+
+<p><a href="https://www.youtube.com/watch?v=TyqgjnnHYk4" target="_blank">Circles in Pre-Calculus (Filipino Explanation)</a></p>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/TyqgjnnHYk4" frameborder="0" allowfullscreen loading="lazy"></iframe>
