--- a/lessons/precalc/unit2-parabola.html
+++ b/lessons/precalc/unit2-parabola.html
@@ -1,4 +1,3 @@
-<!-- unit2-parabola.html - Full Updated with Fixed Images -->
 <h2>Unit 2: Parabola and Ellipse</h2>
 
 <h3>Learning Objectives</h3>
@@ -17,7 +16,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Parabola_circle_directrix.svg" alt="Parabola focus and directrix" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicparabola.png" alt="Parabola focus and directrix" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Ellipse</h3>
@@ -25,7 +24,7 @@
 <p>Standard: (x - h)²/a² + (y - k)²/b² = 1 (a > b).</p>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Ellipse-def-en.svg" alt="Ellipse with foci and axes" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conicellipse.png" alt="Ellipse with foci" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Examples</h3>
@@ -41,6 +40,3 @@
 <h3>Helpful Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=fY03z6PXPek" target="_blank">Parabola (DepEd-based)</a></p>
 <iframe width="100%" height="315" src="https://www.youtube.com/embed/fY03z6PXPek" frameborder="0" allowfullscreen loading="lazy"></iframe>
-
-<p><a href="https://www.youtube.com/watch?v=8Afel63TLso" target="_blank">Ellipse Explanation</a></p>
-<iframe width="100%" height="315" src="https://www.youtube.com/embed/8Afel63TLso" frameborder="0" allowfullscreen loading="lazy"></iframe>
