--- a/lessons/precalc/unit1-conic.html
+++ b/lessons/precalc/unit1-conic.html
@@ -1,3 +1,4 @@
+<!-- unit1-conic.html - Full Code with Working Images -->
 <h2>Unit 1: Introduction to Conic Sections and the Circle</h2>
 
 <h3>Learning Objectives</h3>
