--- a/lessons/precalc/unit3-hyperbola.html
+++ b/lessons/precalc/unit3-hyperbola.html
@@ -1,4 +1,4 @@
-<!-- unit3-hyperbola.html - Full Updated with Fixed Images -->
+<!-- unit3-hyperbola.html - Full Code with Working Images -->
 <h2>Unit 3: Hyperbola</h2>
 
 <h3>Learning Objectives</h3>
@@ -17,7 +17,7 @@
 </ul>
 
 <p style="text-align:center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Hyperbola_%28en%29.svg" alt="Hyperbola branches and asymptotes" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
+    <img src="https://mathbitsnotebook.com/Geometry/Conics/conichyperbola.png" alt="Hyperbola with asymptotes" style="max-width:100%; height:auto; border-radius:8px;" loading="lazy">
 </p>
 
 <h3>Examples</h3>
